--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron": "^1.6.11",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
@@ -30,6 +31,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "babel-preset-env": "^1.5.2"
   }
 }
