--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/DavideBecker/p2-g6-EMotion#readme",
   "dependencies": {
+    "babel-preset-env": "^1.5.2",
     "colors": "^1.1.2",
     "electron": "^1.6.11",
     "gulp": "^3.9.1",
@@ -31,7 +32,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "run-sequence": "^1.2.2",
-    "babel-preset-env": "^1.5.2"
+    "json-cycle": "^1.1.0",
+    "run-sequence": "^1.2.2"
   }
 }
