Updated gulpfile - Added task to generate Github Pages

--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,9 @@ typings/
 ### Project specific
 
 # Asset folder (Generate it yourself with 'gulp')
-assets/
+/assets/
+
+# Electron builds
+# You can use electron-packager
+# electron-packager ./ e-motion --all -overwrite --out=./builds
+builds/
